# smtp

./: Cargo.toml  README.md  config.toml
src/: error.rs  main.rs
src/config/: config_error.rs  dkim_config.rs  logging_config.rs  mod.rs  server_config.rs
src/dkim/: dkim_error.rs  mod.rs
src/helpers/: email_helper.rs  mod.rs
src/plugins/: mod.rs
src/queue/: models.rs
src/smtp/: error.rs  mod.rs  response_builder.rs
src/smtp_client/: delivery_result.rs  mod.rs
src/smtp_server/: error.rs  mod.rs  response_builder.rs
