[package]
name = "smtp"
version = "0.1.0"
edition = "2024"

[dependencies]

# DKIM
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
rand = "0.8"
rsa = {version= "0.9.10", features = ["sha2"]}
sha2 = "0.10.9"

serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "1.0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.21.0", features = ["v4"] }
